--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<%= link_to 'home', root_path %>
+
+<% if user_signed_in? %>
+<%= current_user.email %>
+<%= link_to 'log out', destroy_user_session_path, method: :delete %>
+<% else %>
+<%= link_to 'log in', new_user_session_path %>
+<%= link_to 'sign up', new_user_registration_path %>
+<% end %>
