--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
             <ul class="navbar-nav ms-auto mb-2 mb-md-0">
               <% if user_signed_in? %>
                 <li class="nav-item">
+                  <%= link_to 'Add post', new_post_path, class: "nav-link" %>
+                </li>
+                <li class="nav-item">
                   <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: "nav-link" %>
                 </li>
               <% else %>
