--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,7 +7,7 @@
   </li>
 </ol>
 
-<div class="row justify-content-center mt-4">
+<div class="row justify-content-center mt-4 mb-4">
   <article class="col-12">
     <h1 class="mb-4 mb-lg-5"><%= @post.title %></h1>
     <p><%= @post.body %></p><p></p>
@@ -19,4 +19,27 @@
     </div>
   </article>
 </div>
+
+<%= simple_form_for @post.post_comments.build, url: post_comments_path(@post) do |f| %>
+  <%= f.input :content, as: :text %>
+  <%= f.button :submit, class: "mt-2 btn-primary" %>
+<% end %>
+
+<% @post.post_comments.filter { |c| c.content }.each do |comment| %>
+  <div class="card mt-4 mb-4">
+    <div class="card-header small mb-2 d-flex">
+      <div id="comment-28">
+        <span class="font-weight-bold"><%= comment.user.email %></span>
+        <span class="mx-2 font-weight-light"><%= time_ago_in_words(comment.created_at) %></span>
+      </div>
+    </div>
+
+    <div class="card-body d-flex">
+      <div class="w-100">
+        <div class="mb-3"><%= comment.content %></div>
+      </div>
+    </div>
+  </div>
+<% end %>
+
 
