--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,21 +25,4 @@
   <%= f.button :submit, class: "mt-2 btn-primary" %>
 <% end %>
 
-<% @post.post_comments.filter { |c| c.content }.each do |comment| %>
-  <div class="card mt-4 mb-4">
-    <div class="card-header small mb-2 d-flex">
-      <div id="comment-28">
-        <span class="font-weight-bold"><%= comment.user.email %></span>
-        <span class="mx-2 font-weight-light"><%= time_ago_in_words(comment.created_at) %></span>
-      </div>
-    </div>
-
-    <div class="card-body d-flex">
-      <div class="w-100">
-        <div class="mb-3"><%= comment.content %></div>
-      </div>
-    </div>
-  </div>
-<% end %>
-
-
+<%= nested_comments(@post.post_comments.arrange(:order => :created_at)) %>
