--- a/app/views/post_comments/_post_comment.html.erb
+++ b/app/views/post_comments/_post_comment.html.erb
@@ -29,7 +29,7 @@
   >
     <div class="card card-body">
       <% if current_user %>
-      <%= simple_form_for @post.post_comments.build, url: post_comments_path(@post) do |f| %>
+      <%= simple_form_for @post.comments.build, url: post_comments_path(@post) do |f| %>
         <%= f.input :content, as: :text %>
         <%= f.hidden_field :parent_id, value: post_comment.id %>
         <%= f.button :submit, class: "mt-2 btn-primary" %>
